# arduino-midi2dmx

./: .gitignore  README.md
kicad/: j_ProcessorBoards.kicad_sym  midi2dmx.csv  midi2dmx.kicad_pcb  midi2dmx.kicad_prl  midi2dmx.kicad_pro  midi2dmx.kicad_sch  sym-lib-table
kicad/bom/: ibom.html
src/midi2dmx/: CMakeLists.txt  keywords.txt  library.properties
src/midi2dmx/doc/: documentation.dox  doxygen.in
src/midi2dmx/examples/Basic_IO/: Basic_IO.ino
src/midi2dmx/examples/DMXGain/: DMXGain.ino
src/midi2dmx/examples/DMXOverride/: DMXOverride.ino
src/midi2dmx/src/: ISerialReader.h  ISleep.h  midi2dmx.h
src/midi2dmx/src/midi2dmx/: ContinuousController.cpp  ContinuousController.h  Dmx.cpp  Dmx.h  DmxOverride.cpp  DmxOverride.h  DmxRgbChannels.cpp  DmxRgbChannels.h  DmxValue.cpp  DmxValue.h  Midi2Dmx.cpp  MidiReader.cpp  MidiReader.h  util.h
src/midi2dmx/tests/: unittests.cpp
src/midi2dmx/tests/midi2dmx/: ContinuousControllerTests.cpp  DmxOverrideTests.cpp  DmxRgbChannelsTests.cpp  DmxTests.cpp  DmxValueTests.cpp  Midi2DmxTests.cpp  MidiReaderTest.cpp  UtilTests.cpp
src/midi2dmx/tests/mocks/: SerialReaderMock.cpp  SerialReaderMock.h  SleepMock.h
